--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,7 @@ bower_components
 build/Release
 
 # Dependency directories
-frontend/node_modules/
+node_modules/
 backend/node_modules/
 jspm_packages/
 
@@ -70,7 +70,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-frontend/.env
+.env
 backend/.env
 .env.test
 
